--- a/AnalyzerControlApp/AnalyzerControlGUI/Resources/Styles.xaml
+++ b/AnalyzerControlApp/AnalyzerControlGUI/Resources/Styles.xaml
@@ -3,9 +3,9 @@
 
     <Style x:Key="EmergencyButton" TargetType="{x:Type Button}">
         <Setter Property="BorderBrush" Value="Red"/>
-        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="Background" Value="red"/>
         <Setter Property="Foreground" Value="White"/>
-        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="FontSize" Value="24"/>
         <Setter Property="Padding" Value="10"/>
         <Setter Property="Template">
             <Setter.Value>
@@ -17,7 +17,7 @@
             </Setter.Value>
         </Setter>
     </Style>
-    
+
     <Style x:Key="ConnectionButton" TargetType="{x:Type Button}">
         <Setter Property="BorderBrush" Value="Orange"/>
         <Setter Property="Background" Value="Transparent"/>
@@ -34,44 +34,19 @@
             </Setter.Value>
         </Setter>
     </Style>
-    
-    <Style x:Key="ButtonPink" TargetType="{x:Type Button}">
-        <Setter Property="Background" Value="Transparent"/>
-        <Setter Property="Foreground" Value="White"/>
-        <Setter Property="FontSize" Value="14"/>
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="{x:Type Button}">
-                    <Border Background="{TemplateBinding Background}" BorderBrush="HotPink" BorderThickness="2">
-                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                    </Border>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-        <Style.Triggers>
-            <Trigger Property="IsPressed" Value="True">
-                <Setter Property="Template">
-                    <Setter.Value>
-                        <ControlTemplate TargetType="{x:Type Button}">
-                            <Border Background="{TemplateBinding Background}" BorderBrush="HotPink" BorderThickness="3">
-                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                            </Border>
-                        </ControlTemplate>
-                    </Setter.Value>
-                </Setter>
-            </Trigger>
-        </Style.Triggers>
-    </Style>
 
-    <Style x:Key="ButtonGreen" TargetType="{x:Type Button}">
+    <Style x:Key="RectangleButton" TargetType="{x:Type Button}">
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="Foreground" Value="White"/>
         <Setter Property="FontSize" Value="14"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
-                    <Border Background="{TemplateBinding Background}" BorderBrush="LightGreen" BorderThickness="2">
-                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    <Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="2">
+                        <TextBlock HorizontalAlignment="Center"
+                                   VerticalAlignment="Center"
+                                   Text="{TemplateBinding Content}" 
+                                   TextWrapping="Wrap"/>
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
@@ -81,8 +56,11 @@
                 <Setter Property="Template">
                     <Setter.Value>
                         <ControlTemplate TargetType="{x:Type Button}">
-                            <Border Background="{TemplateBinding Background}" BorderBrush="LightGreen" BorderThickness="3">
-                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            <Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="3">
+                                <TextBlock HorizontalAlignment="Center"
+                                   VerticalAlignment="Center"
+                                   Text="{TemplateBinding Content}" 
+                                   TextWrapping="Wrap"/>
                             </Border>
                         </ControlTemplate>
                     </Setter.Value>
