--- a/AnalyzerControlApp/AnalyzerControlGUI/Views/Windows/AnalyzerControlWindow.xaml
+++ b/AnalyzerControlApp/AnalyzerControlGUI/Views/Windows/AnalyzerControlWindow.xaml
@@ -65,10 +65,35 @@
                                 VerticalAlignment="Center"
                                 Grid.Column="0" 
                                 Grid.RowSpan="3">
-                    <Button Height="100" Margin="0 24" Command="{Binding LoadCommand}" Style="{StaticResource ButtonGreen}">Загрузка</Button>
-                    <Button Height="100" Margin="0 24" Command="{Binding AbortCommand}" Style="{StaticResource ButtonPinkRound}">Остановить</Button>
-                    <Button Height="100" Margin="0 24" Command="{Binding ResumeCommand}" Style="{StaticResource ButtonGreenRound}">Продолжить</Button>
-                    <Button Height="100" Margin="0 24" Command="{Binding UnloadCommand}" Style="{StaticResource ButtonPink}">Выгрузка</Button>
+                    <Button Height="100" Margin="0 10" 
+                            BorderBrush="DeepSkyBlue"
+                            Command="{Binding MorningCheckoutCommand}" 
+                            Style="{StaticResource RectangleButton}" 
+                            Content="Morning Checkout"/>
+                    <Button Height="100" Margin="0 10" 
+                            BorderBrush="DeepSkyBlue"
+                            Command="{Binding EveningCheckoutCommand}" 
+                            Style="{StaticResource RectangleButton}" 
+                            Content="Evening Checkout"/>
+                    <Button Height="100" Margin="0 10"
+                            BorderBrush="LightGreen"
+                            Command="{Binding StartCommand}" 
+                            Style="{StaticResource RectangleButton}" 
+                            Content="Запуск"/>
+                    <Button Height="50" Margin="0 10" 
+                            BorderBrush="LightGreen"
+                            Command="{Binding LoadCommand}" 
+                            Style="{StaticResource RectangleButton}" 
+                            Content="Загрузка"/>
+                    <Button Height="100" Margin="0 10" Command="{Binding AbortCommand}" 
+                            Style="{StaticResource ButtonPinkRound}" Content="Остановить"/>
+                    <Button Height="100" Margin="0 10" Command="{Binding ResumeCommand}" 
+                            Style="{StaticResource ButtonGreenRound}" Content="Продолжить"/>
+                    <Button Height="50" Margin="0 10" 
+                            BorderBrush="HotPink"
+                            Command="{Binding UnloadCommand}" 
+                            Style="{StaticResource RectangleButton}" 
+                            Content="Выгрузка"/>
                 </StackPanel>
 
                 <StackPanel Orientation="Vertical" 
@@ -84,12 +109,14 @@
                     </Label>
 
                     <ListView x:Name="cassettesLV"
-                                  ItemsSource="{Binding Cassettes, UpdateSourceTrigger=PropertyChanged}"
-                                  HorizontalAlignment="Center"  
-                                  Height="Auto" Width="Auto"
-                                  ScrollViewer.VerticalScrollBarVisibility="Disabled" 
-                                  ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                                  BorderThickness="0" Background="Transparent">
+                              ItemsSource="{Binding Cassettes, UpdateSourceTrigger=PropertyChanged}"
+                              SelectedIndex="{Binding SelectedCassette, Mode=OneWayToSource,UpdateSourceTrigger=PropertyChanged}"
+                              SelectionMode="Single"
+                              HorizontalAlignment="Center"
+                              Height="Auto" Width="Auto"
+                              ScrollViewer.VerticalScrollBarVisibility="Disabled"
+                              ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                              BorderThickness="0" Background="Transparent">
                         <ListView.ItemTemplate>
                             <DataTemplate>
                                 <cv:CartridgeCassetteControl 
@@ -102,11 +129,6 @@
                                 <StackPanel Background="Transparent" Orientation="Horizontal" />
                             </ItemsPanelTemplate>
                         </ListView.ItemsPanel>
-                        <ListView.ItemContainerStyle>
-                            <Style TargetType="ListViewItem">
-                                <Setter Property="Focusable" Value="false"/>
-                            </Style>
-                        </ListView.ItemContainerStyle>
                     </ListView>
                 </StackPanel>
 
