Fix rectangle button style text aligment - center.

--- a/AnalyzerControlApp/AnalyzerControlGUI/Resources/Styles.xaml
+++ b/AnalyzerControlApp/AnalyzerControlGUI/Resources/Styles.xaml
@@ -45,6 +45,7 @@
                     <Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="2">
                         <TextBlock HorizontalAlignment="Center"
                                    VerticalAlignment="Center"
+                                   TextAlignment="Center"
                                    Text="{TemplateBinding Content}" 
                                    TextWrapping="Wrap"/>
                     </Border>
