Remove same buttons styles as rectangle button and change style of emergency button to rectangle button. Remove connection button.

--- a/AnalyzerControlApp/AnalyzerControlGUI/Views/Windows/AnalyzerControlWindow.xaml
+++ b/AnalyzerControlApp/AnalyzerControlGUI/Views/Windows/AnalyzerControlWindow.xaml
@@ -40,11 +40,6 @@
                                FontSize="16"
                                Foreground="{Binding ConnectionState, FallbackValue='Red', Converter={StaticResource connectionToColorConverter}}"
                                Text="{Binding ConnectionText, FallbackValue='Соединение не установленно'}"/>
-                    <!--<Button Grid.Column="1"
-                            Content="Соединение"
-                            Style="{StaticResource ConnectionButton }"
-                            Margin="10" Padding="10"
-                            Command="{Binding ConnectionCommand}"/>-->
                 </Grid>
 
                 <cv:ConveyorControl Grid.Row="1"
@@ -170,9 +165,11 @@
 
                     <Button Content="Аварийная остановка!"
                             Command="{Binding AbortCommand}"
+                            Background="Red"
+                            FontSize="24"
                             Height="80"
                             Margin="0 24"
-                            Style="{StaticResource EmergencyButton}"/>
+                            Style="{StaticResource RectangleButton}"/>
                 </StackPanel>
                 <ScrollViewer 
                               Margin="50 0 50 24"
