--- a/AnalyzerControlApp/AnalyzerControlGUI/Views/Windows/AnalyzerControlWindow.xaml
+++ b/AnalyzerControlApp/AnalyzerControlGUI/Views/Windows/AnalyzerControlWindow.xaml
@@ -61,11 +61,6 @@
                                 VerticalAlignment="Center"
                                 Grid.Column="0" 
                                 Grid.RowSpan="3">
-                    <Button Height="100" Margin="0 10"
-                            BorderBrush="LightGreen"
-                            Command="{Binding StartCommand}" 
-                            Style="{StaticResource RectangleButton}" 
-                            Content="Запуск"/>
                     <Button Height="50" Margin="0 10" 
                             BorderBrush="DeepSkyBlue"
                             Command="{Binding MorningCheckoutCommand}" 
@@ -86,6 +81,11 @@
                             Command="{Binding LoadCommand}" 
                             Style="{StaticResource RectangleButton}" 
                             Content="Загрузка"/>
+                    <Button Height="50" Margin="0 10"
+                            BorderBrush="DeepSkyBlue"
+                            Command="{Binding ManualInputCommand}" 
+                            Style="{StaticResource RectangleButton}" 
+                            Content="Ручной ввод"/>
                     <Button Height="100" Margin="0 10" 
                             BorderBrush="HotPink"
                             Command="{Binding AbortCommand}" 
