Add design mode check into ManualInputViewModel - Fixed problem: in design mode it doesn't available to load data from database.

--- a/AnalyzerControlApp/AnalyzerControlGUI/Views/DialogWindows/ManualInputDialog.xaml
+++ b/AnalyzerControlApp/AnalyzerControlGUI/Views/DialogWindows/ManualInputDialog.xaml
@@ -26,7 +26,8 @@
             <Setter Property="AlternatingRowBackground" Value="AliceBlue"/>
             <Setter Property="AutoGenerateColumns" Value="False"/>
 
-            <Setter Property="ColumnHeaderStyle" Value="{DynamicResource ColumnHeaderStyle}"/>
+            <Setter Property="ColumnHeaderStyle" 
+                    Value="{DynamicResource ColumnHeaderStyle}"/>
         </Style>
         <Style x:Key="ColumnHeaderStyle" TargetType="DataGridColumnHeader">
             <Setter Property="FontSize" Value="24" />
