--- a/AnalyzerControlApp/AnalyzerControlGUI/Views/CustomViews/CartridgeCassetteControl.xaml
+++ b/AnalyzerControlApp/AnalyzerControlGUI/Views/CustomViews/CartridgeCassetteControl.xaml
@@ -5,11 +5,11 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:AnalyzerControlGUI.Views.CustomViews"
              mc:Ignorable="d" 
-             d:DesignHeight="75" d:DesignWidth="50" Width="85" Height="100">
+             d:DesignHeight="120" d:DesignWidth="50" Width="85" Height="Auto">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="75"/>
-            <RowDefinition/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Rectangle Grid.Row="0" Fill="White" 
                    Stroke="Black" 
@@ -35,10 +35,21 @@
                HorizontalAlignment="Center" 
                VerticalAlignment="Center"/>
         <Rectangle Grid.Row="1"/>
-        <Label Grid.Row="1" 
-               x:Name="LabelName" 
+        <StackPanel Grid.Row="1" 
+                    Orientation="Vertical">
+            <Label x:Name="LabelName" 
+                   FontSize="12"
+                   Padding="0"
+                   Content="Картридж 1"
                HorizontalAlignment="Center" 
-               VerticalAlignment="Center" 
                Foreground="White"/>
+            <Label x:Name="LabelState" 
+                   FontSize="12"
+                   Padding="0"
+                   Content="Не загружены"
+                   HorizontalAlignment="Center"
+                   Foreground="White"/>
+        </StackPanel>
+        
     </Grid>
 </UserControl>
