Еще одно большое исправление - вынесены RelayCommand и ViewModel в MVVM; - ConveyorCellState вынесено в CellState и применено для ротора; - добавлено отображение цвета ячеек ротора, как у конвеера; - добавлено выделение ячеек ротора и конвеера; - исправлен выбор в канвас в контроллере ротора (передаем число ячеек конвеера); - переименованы ячейки картриджей; - расширены варианты промывки иглы (вода, щелочь); - добавлены новые действия для иглы и поршней; - изменена логика работы конвеера (по датчику пройденной ячейки);

--- a/AnalyzerControlApp/AnalyzerControlGUI/Views/Windows/AnalyzerControlWindow.xaml
+++ b/AnalyzerControlApp/AnalyzerControlGUI/Views/Windows/AnalyzerControlWindow.xaml
@@ -122,6 +122,11 @@
                             Command="{Binding UnloadCommand}" 
                             Style="{StaticResource RectangleButton}" 
                             Content="Выгрузка"/>
+                    <Button Height="50" Margin="0 10" 
+                            BorderBrush="HotPink"
+                            Command="{Binding TestCommand}" 
+                            Style="{StaticResource RectangleButton}" 
+                            Content="Test"/>
                 </StackPanel>
 
                 <StackPanel Orientation="Vertical" 
@@ -194,7 +199,8 @@
                     <DataGrid Height="300"
                               Style="{StaticResource DataGridStyle}"
                               Background="Transparent"
-                              ItemsSource="{Binding SheduledAnalyzes, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}">
+                              ItemsSource="{Binding SheduledAnalyzes, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                              SelectedIndex="{Binding SelectedAnalysisIndex, Mode=OneWayToSource}">
                         <DataGrid.Columns>
                         <DataGridTextColumn Header="Дата"
                                         IsReadOnly="True"
