--- a/AnalyzerControlApp/RemoteDatabaseApp/Views/DialogWindows/PatientInputDialog.xaml
+++ b/AnalyzerControlApp/RemoteDatabaseApp/Views/DialogWindows/PatientInputDialog.xaml
@@ -46,31 +46,33 @@
         </Grid.RowDefinitions>
         <Grid Grid.Row="0">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto"/>
-                <ColumnDefinition/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
-            <StackPanel Orientation="Horizontal" 
-                        Grid.Column="0">
-                <TextBlock Margin="10, 10" 
-                           Text="Пациент:" 
-                           FontSize="24" 
-                           Foreground="White"/>
-                <TextBox Margin="10, 10"
-                         FontSize="24"
-                         Background="White"
-                         Width="500"
-                         Text="{Binding PatientDescription}"/>
-                <TextBlock Margin="10, 10"
-                           Text="Штрихкод:"
-                           FontSize="24"
-                           Foreground="White"/>
-                <TextBox Margin="10, 10"
-                         FontSize="24"
-                         Background="White"
-                         Width="230"
-                         Text="{Binding PatientBarcode}"/>
-            </StackPanel>
-            
+            <TextBlock Grid.Column="0"
+                       Margin="10, 10"
+                       Text="Пациент:"
+                       FontSize="24"
+                       Foreground="White"/>
+            <TextBox Grid.Column="1"
+                     Margin="10, 10"
+                     FontSize="24"
+                     Background="White"
+                     HorizontalAlignment="Stretch"
+                     Text="{Binding PatientDescription}"/>
+            <TextBlock Grid.Column="2"
+                       Margin="10, 10"
+                       Text="ID:"
+                       FontSize="24"
+                       Foreground="White"/>
+            <TextBox Grid.Column="3"
+                     Margin="10, 10"
+                     FontSize="24"
+                     Background="White"
+                     Width="250"
+                     Text="{Binding PatientBarcode}"/>
         </Grid>
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
