--- a/AnalyzerControlApp/AnalyzerControlGUI/Views/Windows/AnalyzerControlWindow.xaml
+++ b/AnalyzerControlApp/AnalyzerControlGUI/Views/Windows/AnalyzerControlWindow.xaml
@@ -199,24 +199,30 @@
                     <DataGrid Height="300"
                               Style="{StaticResource DataGridStyle}"
                               Background="Transparent"
-                              ItemsSource="{Binding SheduledAnalyzes, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                              ItemsSource="{Binding Analyzes, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                               SelectedIndex="{Binding SelectedAnalysisIndex, Mode=OneWayToSource}">
                         <DataGrid.Columns>
                         <DataGridTextColumn Header="Дата"
                                         IsReadOnly="True"
                                         FontSize="16"
-                                        Width="200" 
+                                        MinWidth="150" 
                                         Binding="{Binding Date}"/>
-                        <DataGridTextColumn Header="Штрих-код"
+                        <DataGridTextColumn Header="ID Пациента"
                                         IsReadOnly="True"
                                         FontSize="16"
                                         Width="*"
-                                        Binding="{Binding Barcode}"/>
-                        <DataGridTextColumn Header="Статус"
+                                        Binding="{Binding PatientId}"/>
+                        <DataGridTextColumn Header="Стадия"
                                         IsReadOnly="True"
                                         FontSize="16"
-                                        Width="150" 
+                                        MinWidth="100" 
                                         Binding="{Binding CurrentStage}"/>
+                            <DataGridTextColumn Header="Результат"
+                                        IsReadOnly="True"
+                                        FontSize="16"
+                                        Width="Auto"
+                                        MinWidth="100"
+                                        Binding="{Binding Result}"/>
                         </DataGrid.Columns>
                     </DataGrid>
 
