Доюавлена возможность внесения нескольких анализов для одного пациента.  - Запрос для нескольких анализов в сервере и клиенте;  - Проаерка N свободных ячеек в роторе;  - Загрузка нескольких картриджей; Незначительные изменения:  - Отображение оставшегося времени для инкубации;  - в ячейке ротора хранится ID анализа и ID картриджа;  - Добавлен возврат в дом при сканировании кассет;  - Настроены ускорения для крюка и поворота загрузки;

--- a/AnalyzerControlApp/AnalyzerControlGUI/Views/Windows/AnalyzerControlWindow.xaml
+++ b/AnalyzerControlApp/AnalyzerControlGUI/Views/Windows/AnalyzerControlWindow.xaml
@@ -216,8 +216,13 @@
                         <DataGridTextColumn Header="Стадия"
                                         IsReadOnly="True"
                                         FontSize="16"
-                                        MinWidth="100" 
+                                        MinWidth="70" 
                                         Binding="{Binding CurrentStage}"/>
+                            <DataGridTextColumn Header="Осталось (мин.)"
+                                        IsReadOnly="True"
+                                        FontSize="16"
+                                        MinWidth="120"
+                                        Binding="{Binding RemainingIncubationTime}"/>
                             <DataGridTextColumn Header="Результат"
                                         IsReadOnly="True"
                                         FontSize="16"
